# dash_deep

./: .cursorignore  .cursorindexingignore  .env  .env.swp  .gitignore  GPU_SETUP_SUMMARY.md  Untitled1.ipynb  appMain.py  application_model.ipynb  arbo_projet.txt  bdd_requete.txt  conclusions.txt  create_model.ipynb  dash_deep.pyperf  dash_deep.pyproj  dash_deep.sln  dash_deep1.pyperf  dash_deep_TO_DELETE.sln  delisted.txt  description_projet.txt  env_var_setup.bat  explication.txt  heure_cotation.txt  index.py  list_model_description.txt  lstm_1.h5  main.py  mock_transactions.csv  model.h5  notifs.py  partitionnement.txt  readme.txt  requirements.txt  strangeThings.txt  taille_memoire_2023_08_09_BDD.csv  technical_description.md  test_models.py  todo.txt  users.py  vulnerability.txt
.ipynb_checkpoints/: create_model-checkpoint.ipynb
Models/: Broker.py  Order.py  Shares.py  SqlCom.py  Visualizer.py  Wallet.py  lstm.py  prediction_utils.py  tf_config.py  trading212.py  transformer.py  utils.py
apps/: app2.py  dashboard.py  prediction.py  sharedFig.py  update.py
assets/: stylesheet.css
data/: 1er_filtrage_yahoo_info_dispo.csv
deepLearning/: lstm.py
scripts/: add_tickers_launcher.py  clean_delisted_tickers.py  fix_db_schema.py  refresh_ticker_list.py  test_launcher.py  test_lstm.py  update_data_launcher.py  update_stats_launcher.py
server-rs/: Cargo.toml
server-rs/src/: main.rs
server-rs/src/routes/: corr.rs  health.rs  mod.rs  predict.rs  simulate.rs  stats.rs  ws.rs
templates/: index.html
test_models/: create_model.ipynb  create_model.py  main.py  (+6 more)
(+87 files in other folders)
